--- a/okreplay-gradle-plugin/build.gradle
+++ b/okreplay-gradle-plugin/build.gradle
@@ -10,6 +10,10 @@ dependencies {
   compileOnly dep.androidPlugin
   compileOnly dep.ddmlib
   implementation dep.kotlinStdLib
+  implementation dep.commonsIo
+  implementation dep.builderTestApi
+  implementation dep.guava_jre
+  implementation dep.androidToolsCommon
   testImplementation gradleTestKit()
   testImplementation dep.androidPlugin
   testImplementation dep.ddmlib
